# getWeightByRank

./: GetWeightByRank.json  README.md
AclNNInvocation/: README.md  run.sh
AclNNInvocation/scripts/: gen_data.py  verify_result.py
AclNNInvocation/src/: CMakeLists.txt  main.cpp  op_runner.cpp
GetWeightByRankMultiCore/: README.md  build.sh
GetWeightByRankMultiCore/op_host/: get_weight_by_rank.cpp  get_weight_by_rank_tiling.h
GetWeightByRankMultiCore/op_kernel/: get_weight_by_rank.cpp
GraphInvocation/: run.sh
GraphInvocation/src/: CMakeLists.txt  main.cpp
